# TODO_APP_CLI

./: README.md
Phase I/todoapp/src/: main.py
Phase I/todoapp/src/managers/: todo_manager.py
Phase I/todoapp/src/models/: task.py
phase/hackathon-2/: README.md  main.py  pyproject.toml
phase/hackathon-2/history/prompts/001-todo-console-app/: 0001-todo-console-app-specification.spec.prompt.md  0002-todo-console-app-implementation-plan.plan.prompt.md  0003-todo-console-app-task-breakdown.tasks.prompt.md
phase/hackathon-2/history/prompts/constitution/: 0001-create-immutable-project-constitution.constitution.prompt.md
phase/hackathon-2/scripts/: validate.sh
phase/hackathon-2/specs/001-todo-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase/hackathon-2/specs/001-todo-console-app/checklists/: requirements.md
phase/hackathon-2/specs/001-todo-console-app/contracts/: service-contracts.md
phase/hackathon-2/src/: __init__.py  app.py
phase/hackathon-2/src/models/: __init__.py  exceptions.py  task.py
phase/hackathon-2/src/services/: __init__.py  task_service.py
phase/hackathon-2/src/storage/: __init__.py  in_memory.py  protocol.py
phase/hackathon-2/src/ui/: __init__.py  menu.py  renderer.py
phase/hackathon-2/tests/: __init__.py  conftest.py
phase/hackathon-2/tests/integration/: test_user_stories.py
phase/hackathon-2/tests/performance/: test_performance.py
phase/hackathon-2/tests/unit/: test_app.py  test_menu.py  test_models.py  test_renderer.py  test_repository.py  test_service.py
(+1 files in other folders)
